--- a/PrimerRazorPages/Pages/Shared/_Layout.cshtml
+++ b/PrimerRazorPages/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-red border-bottom box-shadow mb-3">
             <div class="container">
                 
                 <a class="navbar-brand" asp-area="" asp-page="/Index">PrimerRazorPages</a>
@@ -43,7 +43,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="containerr">
             &copy; 2025 - PrimerRazorPages - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
