--- a/PrimerRazorPages/Pages/Shared/_Layout.cshtml.css
+++ b/PrimerRazorPages/Pages/Shared/_Layout.cshtml.css
@@ -39,10 +39,16 @@ button.accept-policy {
   line-height: inherit;
 }
 
-.footer {
+.containerr {
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+  background-color: red;
+  
+}
+.container 
+{
+  background-color: green;
 }
