--- a/PrimerRazorPages/Pages/Shared/_Layout.cshtml
+++ b/PrimerRazorPages/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿<!-- agregar login, agregar cambio de tema, -->
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
