--- a/PrimerRazorPages/Pages/Shared/_Layout.cshtml
+++ b/PrimerRazorPages/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- agregar login, agregar cambio de tema, -->
+﻿<!-- agregar login, agregar cambio de tema, hacer carrosel, https://getbootstrap.com/docs/4.0/components/carousel/-->
 
 
 <!DOCTYPE html>
